--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ a:hover {
   display: table;
   text-align: center;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .hero-text-wrapper {
@@ -183,7 +183,7 @@ a:hover {
 =============================*/
 
 .program {
-  width: 100vw;
+  width: 100%;
   text-align: left;
   background: url('../images/restaurant.png') repeat center;
   color: #fff;
@@ -231,7 +231,7 @@ a:hover {
 .faq {
   background: url('../images/restaurant.png') repeat center;
   color: #fff;
-  width: 100vw;
+  width: 100%;
   text-align: center;
 }
 
@@ -284,7 +284,7 @@ a:hover {
 
 footer {
   height: 10vh;
-  width: 100vw;
+  width: 100%;
   background-color: #bdbdbd;
   color: #fff;
   font-family: 'Muli', sans-serif;
